welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: not found: value int
  int aDiff = Math.abs(a - 10);
  ^close10:4: error: not found: value int
  int bDiff = Math.abs(b - 10);
  ^close10:6: error: not found: value aDiff
  if (aDiff < bDiff) 
      ^close10:10: error: not found: value bDiff
  if (bDiff < aDiff) 
      ^